<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.com.etn.componentes.LinearVsRelativeActivity"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/linear_vs_realative_textview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/linear_vs_realative_edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_vs_realative_textview_name"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

            />

        <TextView
            android:id="@+id/linear_vs_realative_textview_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_vs_realative_edittext_name"
            android:drawableLeft="@drawable/ic_person_add_black_24dp"
            android:text="@string/avatar"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic" />

        <CheckBox
            android:id="@+id/linear_vs_realative_chechbox_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/linear_vs_realative_textview_avatar"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/linear_vs_realative_textview_apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/linear_vs_realative_edittext_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lastname"
            android:inputType="textPersonName"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/linear_vs_realative_textview_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logo"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold|italic" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:src="@drawable/ic_visibility_black_24dp"
                android:paddingLeft="-350px"/>


            <CheckBox
                android:id="@+id/linear_vs_realative_chechbox_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

